@@ -55,9 +55,6 @@ public:
     bool makeCurrent(QPlatformSurface *surface);
     EGLSurface eglSurfaceForPlatformSurface(QPlatformSurface *surface);
     void swapBuffers(QPlatformSurface *surface);
-
-private:
-    bool m_swapIntervalSet;
 };
 
 QT_END_NAMESPACE
