@@ -78,6 +78,7 @@ private:
     GLXContext m_shareContext;
     QSurfaceFormat m_format;
     bool m_isPBufferCurrent;
+    int m_swapInterval;
 };
 
 
